--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "core-js": "^3.15.2",
     "next": "11.0.1",
+    "prettier": "^2.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.3.1",
     "@types/react": "17.0.14",
-    "eslint": "7.30.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
     "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "eslint-config-prettier": "^8.3.0",
+    "typescript": "^4.3.5"
   }
 }
