--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "covid-letter-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "core-js": "^3.15.2",
-    "next": "11.0.1",
-    "prettier": "^2.3.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "^16.3.1",
-    "@types/react": "17.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "eslint-config-next": "11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "typescript": "^4.3.5"
-  }
+    "name": "covid-letter-web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "core-js": "^3.15.2",
+        "next": "11.0.1",
+        "prettier": "^2.3.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "@types/node": "^16.3.1",
+        "@types/react": "17.0.14",
+        "@typescript-eslint/eslint-plugin": "^4.28.2",
+        "@typescript-eslint/parser": "^4.28.2",
+        "eslint": "^7.30.0",
+        "eslint-config-next": "11.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-react": "^7.24.0",
+        "lint-staged": "^11.0.0",
+        "typescript": "^4.3.5"
+    },
+    "lint-staged": {
+        "**/*.{json,yaml,md}": "prettie --check",
+        "**/*.{js,jsx,tsx}": "eslint"
+    }
 }
