--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "prettier:fix": "prettier '**/*.{json,yaml}' --write"
     },
     "dependencies": {
         "core-js": "^3.15.2",
@@ -24,11 +25,18 @@
         "eslint-config-next": "11.0.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.24.0",
+        "husky": "^4.2.5",
         "lint-staged": "^11.0.0",
         "typescript": "^4.3.5"
     },
     "lint-staged": {
-        "**/*.{json,yaml,md}": "prettie --check",
+        "**/*.{json,yaml,md}": "prettier --check",
         "**/*.{js,jsx,tsx}": "eslint"
+    },
+    "husky": {
+        "hooks": {
+            "prepare-commit-msg": "scripts/add-issue-to-commit.sh $HUSKY_GIT_PARAMS",
+            "pre-commit": "lint-staged"
+        }
     }
 }
