--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,11 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "baseUrl": "src",
+        "paths": {
+            "$components/*": ["components/*"]
+        }
     },
     "compileOnSave": true,
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
