--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "cross-env REACT_APP_ENV=local next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -14,6 +14,7 @@
     "dependencies": {
         "axios": "^0.21.1",
         "core-js": "^3.15.2",
+        "cross-env": "^7.0.3",
         "next": "11.0.1",
         "prettier": "^2.3.2",
         "react": "17.0.2",
