[Nexters/covid-letter-web#5] 🔧 alias paths 수정

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,9 @@
             "$components/*": ["components/*"],
             "$utils/*": ["utils/*"],
             "$constants/*": ["constants/*"],
+            "$constants": ["constants/index"],
             "$config/*": ["config/*"],
+            "$config": ["config/index"],
             "$types/*": ["types/*"]
         }
     },
