--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,14 +18,17 @@
             "$components/*": ["components/*"],
             "$utils/*": ["utils/*"],
             "$constants/*": ["constants/*"],
+            "$constants": ["constants/index"],
             "$config/*": ["config/*"],
+            "$config": ["config/index"],
             "$types/*": ["types/*"]
         },
         "typeRoots": ["./node_modules/@types"],
         "types": ["jest", "react"],
         "allowSyntheticDefaultImports": true,
         "noUnusedLocals": true,
-        "noUnusedParameters": true
+        "noUnusedParameters": true,
+        "sourceMap": true
     },
     "compileOnSave": true,
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
