[Nexters/covid-letter-web#5] ✨  context api에서 swr 사용

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
             "$constants": ["constants/index"],
             "$config/*": ["config/*"],
             "$config": ["config/index"],
-            "$types/*": ["types/*"]
+            "$types/*": ["types/*"],
+            "$hooks/*": ["hooks/*"]
         }
     },
     "include": ["src"]
