--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "dev": "cross-env REACT_APP_ENV=local next dev",
         "build": "next build",
-        "start": "next start",
+        "build:local": "cross-env REACT_APP_ENV=local next build",
+        "start:local": "cross-env REACT_APP_ENV=local next start",
         "lint": "next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
