--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/react-dom": "^17.0.9",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
+        "autoprefixer": "^10.3.0",
         "eslint": "^7.30.0",
         "eslint-config-next": "11.0.1",
         "eslint-config-prettier": "^8.3.0",
@@ -37,6 +38,8 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "lint-staged": "^11.0.0",
+        "postcss": "^8.3.5",
+        "tailwindcss": "^2.2.4",
         "ts-jest": "^27.0.3",
         "typescript": "^4.3.5"
     },
