[Nexters/covid-letter-web#13] ✨ 네아로 로그인 화면 이동

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
             "$config/*": ["config/*"],
             "$config": ["config/index"],
             "$types/*": ["types/*"],
-            "$hooks/*": ["hooks/*"]
+            "$hooks/*": ["hooks/*"],
+            "$contexts/*": ["contexts/*"]
         }
     },
     "include": ["src"]
