--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "cross-env": "^7.0.3",
         "next": "11.0.1",
         "prettier": "^2.3.2",
+        "randomstring": "^1.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "swr": "^0.5.6"
@@ -29,6 +30,7 @@
         "@testing-library/user-event": "^13.1.9",
         "@types/jest": "^26.0.24",
         "@types/node": "^16.3.1",
+        "@types/randomstring": "^1.1.7",
         "@types/react": "17.0.14",
         "@types/react-dom": "^17.0.9",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
