--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "scripts": {
         "dev": "cross-env REACT_APP_ENV=local next dev",
         "build": "next build",
-        "build:local": "cross-env REACT_APP_ENV=local next build",
-        "start:local": "cross-env REACT_APP_ENV=local next start",
+        "build:local": "npm run clean && cross-env REACT_APP_ENV=local next build",
+        "start:local": "cross-env REACT_APP_ENV=local next start -p 8081",
+        "clean": "rm -rf .next",
         "lint": "next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
-        "test:watch": "jest --config=jest.config.js --watch"
+        "test:watch": "jest --config=jest.config.js --watch",
+        "deploy": "npm install && npm run build:local && eb deploy production"
     },
     "dependencies": {
         "axios": "^0.21.1",
