[Nexters/covid-letter-web#10] :rocket: workflow 버그 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
               run: npm run build:local
 
             - name: Generate deployment package
-              run: zip -r deploy.zip * .[^.]* -x "**node_modules**"
+              run: zip -r deploy.zip .
 
             - name: Get timestamp
               uses: gerred/actions/current-time@master
