[Nexters/covid-letter-web#10] :rocket: package.json 수정

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "engines": {
-        "node": "14.16.0"
+        "node": "14.17.1"
     },
     "scripts": {
         "dev": "cross-env REACT_APP_ENV=local next dev",
         "build": "next build",
-        "build:local": "npm run clean && cross-env REACT_APP_ENV=local next build",
+        "build:local": "cross-env REACT_APP_ENV=local next build",
         "start:local": "cross-env REACT_APP_ENV=local next start -p 8080",
         "clean": "rm -rf .next",
         "lint": "next lint",
