--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "dev": "cross-env REACT_APP_ENV=local next dev",
         "build": "next build",
         "build:local": "cross-env REACT_APP_ENV=local next build",
-        "start:local": "cross-env REACT_APP_ENV=local next start -p 8080",
+        "start:local": "cross-env REACT_APP_ENV=local next start",
+        "build:production": "cross-env REACT_APP_ENV=production next build",
+        "start:production": "cross-env REACT_APP_ENV=production next start -p 8081",
         "clean": "rm -rf .next",
         "lint": "next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
