--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm run build:production
 
       # TEST
-      - name: check dir
+      - name: Check dir
         run: cd .next && ls -al
 
       - name: Generate deployment package
@@ -59,4 +59,4 @@ jobs:
           region: ap-northeast-2
           version_label: ${{ steps.format-time.outputs.replaced }}
           use_existing_version_if_available: true
-          deployment_package: deploy.zip
+          deployment_package: .next/deploy.zip
