--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "test": "jest --config=jest.config.js",
         "test:watch": "jest --config=jest.config.js --watch",
         "deploy": "npm install && npm run build:local && eb deploy production",
-        "deploy:production": "cross-env REACT_APP_ENV=production next build && node ./server.js"
+        "deploy:production": "npm run build:production & cross-env REACT_APP_ENV=production node ./server.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
