--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
         "test:watch": "jest --config=jest.config.js --watch"
     },
     "dependencies": {
+        "@types/classnames": "^2.3.1",
         "axios": "^0.21.1",
+        "classnames": "^2.3.1",
         "core-js": "^3.15.2",
         "cross-env": "^7.0.3",
         "next": "11.0.1",
+        "path": "^0.12.7",
         "prettier": "^2.3.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "sass": "^1.35.2",
         "swr": "^0.5.6"
     },
     "devDependencies": {
