:hammer: update workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: covid-letter
-          environment_name: release
+          environment_name: production
           region: ap-northeast-2
           version_label: ${{ steps.format-time.outputs.replaced }}
           use_existing_version_if_available: true
