--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,26 @@
 {
-    "presets": ["next/babel"]
+    "presets": [
+        [
+            "next/babel",
+            {
+                "preset-react": {
+                    "runtime": "automatic",
+                    "importSource": "@emotion/react"
+                }
+            }
+        ]
+    ],
+    "plugins": [
+        "@emotion/babel-plugin",
+        "babel-plugin-macros",
+        [
+            "module-resolver",
+            {
+                "root": ["."],
+                "alias": {
+                    "@": "./src"
+                }
+            }
+        ]
+    ]
 }
