--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
 name: Deploy
 on:
-    push:
-        branches:
-            - master
-
+  push:
+    branches:
+      - release
 jobs:
     build:
         runs-on: ubuntu-18.04
@@ -26,8 +25,15 @@ jobs:
             - name: Building application
               run: npm run build:local
 
-            - name: Generate deployment package
-              run: zip -r deploy.zip * .[^.]* -x "**node_modules**"
+      - name: Deploy Netlify
+        uses: jsmrcaga/action-netlify-deploy@master
+        with:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_DEPLOY_MESSAGE: Prod deploy v${{ github.ref }}
+          build_directory: '.next'
+          build_command: next build && next export
+          NETLIFY_DEPLOY_TO_PROD: true
 
             - name: Get timestamp
               uses: gerred/actions/current-time@master
