--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint": "next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
-        "test:watch": "jest --config=jest.config.js --watch"
+        "test:watch": "jest --config=jest.config.js --watch",
+        "style": "tailwindcss build src/styles/index.css -o public/assets/styles/index.css"
     },
     "dependencies": {
         "@ant-design/icons": "^4.6.2",
