--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "randomstring": "^1.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-google-login": "^5.2.2",
         "swr": "^0.5.6"
     },
     "devDependencies": {
