--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "classnames": "^2.3.1",
         "core-js": "^3.15.2",
         "cross-env": "^7.0.3",
+        "mobx": "^6.3.2",
+        "mobx-react-lite": "^3.2.0",
         "next": "11.0.1",
         "path": "^0.12.7",
         "prettier": "^2.3.2",
