--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "core-js": "^3.15.2",
         "cross-env": "^7.0.3",
         "http": "0.0.1-security",
+        "mobx": "^6.3.2",
+        "mobx-react-lite": "^3.2.0",
         "next": "11.0.1",
         "next-cookies": "^2.0.3",
         "prettier": "^2.3.2",
