--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@emotion/styled": "^11.3.0",
         "antd": "^4.16.7",
         "axios": "^0.21.1",
+        "bezier-easing": "^2.1.0",
         "core-js": "^3.15.2",
         "cross-env": "^7.0.3",
         "http": "0.0.1-security",
@@ -33,6 +34,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-google-login": "^5.2.2",
+        "react-spring": "^9.2.4",
         "swr": "^0.5.6"
     },
     "devDependencies": {
