--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
         "test:watch": "jest --config=jest.config.js --watch",
+        "test:local": "cross-env REACT_APP_ENV=local jest --watch",
         "style": "tailwindcss build src/styles/index.css -o public/assets/styles/index.css"
     },
     "dependencies": {
