--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
         "test:watch": "jest --config=jest.config.js --watch",
-        "style": "tailwindcss build src/styles/index.css -o public/assets/styles/index.css"
+        "style": "tailwindcss -i src/styles/index.css -o public/assets/styles/index.css"
     },
     "dependencies": {
         "@ant-design/icons": "^4.6.2",
