--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "prettier": "^2.3.2",
         "randomstring": "^1.2.1",
         "react": "17.0.2",
+        "react-device-detect": "^1.17.0",
         "react-dom": "17.0.2",
         "react-google-login": "^5.2.2",
         "react-spring": "^9.2.4",
