--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "next build",
         "build:local": "cross-env REACT_APP_ENV=local next build",
         "start:local": "cross-env REACT_APP_ENV=local next start",
-        "lint": "next lint",
+        "lint": "cross-env REACT_APP_ENV=local next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
         "test:local": "cross-env REACT_APP_ENV=local jest --watch",
