[Nexters/covid-letter-web#37] :wrench: tsconfig에 emotion setting 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
             "$contexts/*": ["contexts/*"]
         },
         "typeRoots": ["./node_modules/@types"],
-        "types": ["jest", "react"],
+        "types": ["jest", "react", "@emotion/react/types/css-prop"],
         "allowSyntheticDefaultImports": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
