[Nexters/covid-letter-web#57] ♻️ tailwindcss 공통 스타일 정의

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,7 +10,8 @@
             "$config": ["config/index"],
             "$types/*": ["types/*"],
             "$hooks/*": ["hooks/*"],
-            "$contexts/*": ["contexts/*"]
+            "$contexts/*": ["contexts/*"],
+            "$styles/*": ["styles/*"]
         }
     },
     "include": ["src"]
