🔧 production 환경  설정

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "cross-env REACT_APP_ENV=local next dev",
         "build": "next build",
         "build:local": "cross-env REACT_APP_ENV=local next build",
+        "build:production": "cross-env REACT_APP_ENV=production next build",
         "start:local": "cross-env REACT_APP_ENV=local next start",
+        "start:production": "cross-env REACT_APP_ENV=production next start",
         "lint": "cross-env REACT_APP_ENV=local next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
