🔧 nextjs 프로젝트 docker build & run

--- a/deployment/configs/nginx.conf
+++ b/deployment/configs/nginx.conf
@@ -49,8 +49,8 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
-        server_name  localhost;
+        listen 80;
+        server_name  _;
 
         location / {
             proxy_set_header HOST $host;
