--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "build:production": "cross-env REACT_APP_ENV=production next build",
         "start:local": "cross-env REACT_APP_ENV=local next start",
         "start:production": "cross-env REACT_APP_ENV=production next start",
+        "pm2:local": "pm2 list && cross-env REACT_APP_ENV=local pm2-runtime start pm2.config.js",
+        "pm2:production": "pm2 list && cross-env REACT_APP_ENV=production pm2-runtime start pm2.config.js",
         "lint": "cross-env REACT_APP_ENV=local next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
