🔧 nginx static files 캐싱

--- a/deployment/configs/nginx.conf
+++ b/deployment/configs/nginx.conf
@@ -46,7 +46,7 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    proxy_cache_path /usr/share/nginx/cache levels=1:2 keys_zone=my_cache:10m max_size=1g;
 
     server {
         listen 80;
@@ -59,12 +59,18 @@ http {
             proxy_redirect off;
         }
 
-        location ~* \.(ico|css|js|gif|jpeg|jpg|png|woff|ttf|otf|svg|woff2|eot)$ {
+        location ~* \.(ico|css|gif|jpeg|jpg|png|woff|ttf|otf|svg|woff2|eot)$ {
             proxy_pass http://node;
             access_log off;
             expires max;
             add_header X-Asset "yes";
             add_header access-control-allow-origin "*";
+            add_header Cache-Control "public";
+        }
+
+        location /_next/static {
+            proxy_cache my_cache;
+            proxy_pass http://node;
         }
     }
 
