🔧 정적 콘텐츠들 또한 프록시 캐시 사용

--- a/deployment/configs/nginx.conf
+++ b/deployment/configs/nginx.conf
@@ -60,12 +60,15 @@ http {
         }
 
         location ~* \.(ico|css|gif|jpeg|jpg|png|woff|ttf|otf|svg|woff2|eot)$ {
+            proxy_cache my_cache;
+            proxy_ignore_headers Cache-Control;
+            proxy_cache_valid 30d;
             proxy_pass http://node;
-            access_log off;
-            expires max;
+            # access_log off;
+            # expires max;
             add_header X-Asset "yes";
             add_header access-control-allow-origin "*";
-            add_header Cache-Control "public";
+            # add_header Cache-Control "public";
         }
 
         location /_next/static {
