🔧 환경변수 NEXT_PUBLIC_ 으로 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,4 @@ services:
         build:
             context: .
             args:
-                REACT_APP_ENV: local
+                NEXT_PUBLIC_ENV: local
