--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ version: '3'
 services:
     nginx:
         image: nginx
+        container_name: nginx
         ports:
             - '80:80'
         volumes:
             - ./deployment/configs/nginx.conf:/etc/nginx/nginx.conf
             - ./deployment/configs/variable.conf:/etc/nginx/variable.conf
     app:
+        container_name: covid-letter-web
         build:
             context: .
             args:
