--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-dom": "17.0.2",
         "react-google-login": "^5.2.2",
         "react-spring": "^9.2.4",
+        "react-textarea-autosize": "^8.3.3",
         "swr": "^0.5.6"
     },
     "devDependencies": {
