--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@emotion/react": "^11.4.0",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "@juggle/resize-observer": "^3.3.1",
         "antd": "^4.16.7",
         "axios": "^0.21.1",
         "bezier-easing": "^2.1.0",
@@ -71,6 +72,7 @@
         "jest": "^26.6.3",
         "lint-staged": "^11.0.0",
         "postcss": "^8.3.5",
+        "resize-observer-polyfill": "^1.5.1",
         "tailwindcss": "^2.2.4",
         "ts-jest": "^27.0.3",
         "twin.macro": "^2.6.2",
