[Nexters/covid-letter-web#96] 🚚 스탬프 컴포넌트명 대문자로 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "baseUrl": "src",
         "paths": {
             "$components/*": ["components/*"],
+            "$assets/*": ["assets/*"],
             "$utils/*": ["utils/*"],
             "$constants/*": ["constants/*"],
             "$constants": ["constants/index"],
