--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
         "dev": "cross-env NEXT_PUBLIC_ENV=local next dev",
         "build": "next build",
         "build:local": "cross-env NEXT_PUBLIC_ENV=local next build",
+        "build:dev": "cross-env NEXT_PUBLIC_ENV=dev next build",
         "build:production": "cross-env NEXT_PUBLIC_ENV=production next build",
         "start:local": "cross-env NEXT_PUBLIC_ENV=local next start",
+        "start:dev": "cross-env NEXT_PUBLIC_ENV=dev next start",
         "start:production": "cross-env NEXT_PUBLIC_ENV=production next start",
         "pm2:local": "pm2 list && cross-env NEXT_PUBLIC_ENV=local pm2-runtime start pm2.config.js",
+        "pm2:dev": "pm2 list && cross-env NEXT_PUBLIC_ENV=dev pm2-runtime start pm2.config.js",
         "pm2:production": "pm2 list && cross-env NEXT_PUBLIC_ENV=production pm2-runtime start pm2.config.js",
         "lint": "cross-env NEXT_PUBLIC_ENV=local next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
