🔒️ imagePullSecrets 추가, docker reg 변경

--- a/deployment/covid-letter-web/templates/deployment.yaml
+++ b/deployment/covid-letter-web/templates/deployment.yaml
@@ -49,3 +49,5 @@ spec:
             path: nginx.conf
           - key: variable.conf
             path: variable.conf
+      imagePullSecrets:
+      - name: regcred
