🔧 k8s dev, production 설정 분리

--- a/deployment/covid-letter-web/dev.values.yaml
+++ b/deployment/covid-letter-web/dev.values.yaml
@@ -1,8 +1,8 @@
-env: production
+env: dev
 
 nginx:
     image:
-        registry: itsme-reg.kr.ncr.ntruss.com/nginx
+        registry: itsme-reg.kr.ncr.ntruss.com/nginx-dev
         tag: latest
         pullPolicy: Always
     resources:
@@ -12,7 +12,7 @@ nginx:
 
 nodejs:
     image:
-        registry: itsme-reg.kr.ncr.ntruss.com/covid-letter-web_app
+        registry: itsme-reg.kr.ncr.ntruss.com/covid-letter-web-dev_app
         tag: latest
         pullPolicy: Always
     resources:
