--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,4 @@ services:
         build:
             context: .
             args:
-                NEXT_PUBLIC_ENV: production
+                NEXT_PUBLIC_ENV: ${NEXT_PUBLIC_ENV}
