--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "pm2:local": "pm2 list && cross-env NEXT_PUBLIC_ENV=local pm2-runtime start pm2.config.js",
         "pm2:dev": "pm2 list && cross-env NEXT_PUBLIC_ENV=dev pm2-runtime start pm2.config.js",
         "pm2:production": "pm2 list && cross-env NEXT_PUBLIC_ENV=production pm2-runtime start pm2.config.js",
+        "docker:build:dev": "NEXT_PUBLIC_ENV=dev docker-compose up -d --build",
+        "docker:build:production": "NEXT_PUBLIC_ENV=production docker-compose up -d --build",
         "lint": "cross-env NEXT_PUBLIC_ENV=local next lint",
         "prettier:fix": "prettier '**/*.{json,yaml}' --write",
         "test": "jest --config=jest.config.js",
