[Nexters/covid-letter-web#88] 🔧 ssl 적용

--- a/deployment/configs/nginx.conf
+++ b/deployment/configs/nginx.conf
@@ -76,26 +76,28 @@ http {
             proxy_pass http://node;
         }
     }
+    
+    server {
+       listen       443 ssl;
+       server_name  www.halo-its.me;
 
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+       ssl_certificate      /etc/ssl/certs/halo-its.me_20210825XB0Z.ca-bundle.pem;
+       ssl_certificate_key  /etc/ssl/certs/halo-its.me_20210825XB0Z.key.pem;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+       ssl_session_cache    shared:SSL:1m;
+       ssl_session_timeout  5m;
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+       ssl_ciphers  HIGH:!aNULL:!MD5;
+       ssl_prefer_server_ciphers  on;
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+       ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+       location / {
+            proxy_set_header HOST $host;
+            proxy_pass http://node;
+            proxy_http_version 1.1;
+            proxy_redirect off;
+        }
+    }
     include servers/*;
 }
