--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         volumes:
             - ./deployment/configs/nginx.conf:/etc/nginx/nginx.conf
             - ./deployment/configs/variable.conf:/etc/nginx/variable.conf
+            - ./deployment/certs/halo-its.me_20210825XB0Z.ca-bundle.pem:/etc/ssl/certs/halo-its.me_20210825XB0Z.ca-bundle.pem
+            - ./deployment/certs/halo-its.me_20210825XB0Z.key.pem:/etc/ssl/certs/halo-its.me_20210825XB0Z.key.pem
     app:
         container_name: covid-letter-web
         build:
