--- a/deployment/covid-letter-web/templates/service.yaml
+++ b/deployment/covid-letter-web/templates/service.yaml
@@ -10,6 +10,10 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
+    - name: https
+      port: 443
+      targetPort: 443
+      protocol: TCP
   type: LoadBalancer
   selector: 
     {{- include "covid-letter-web.selectorLabels" . | nindent 4 }}
