--- a/deployment/covid-letter-web/values.yaml
+++ b/deployment/covid-letter-web/values.yaml
@@ -5,6 +5,7 @@ nginx:
         registry: itsme-reg.kr.ncr.ntruss.com/nginx
         tag: latest
         pullPolicy: Always
+    volumeMounts: ssl-config-dir
     resources:
         limits:
             cpu: 1
