--- a/deployment/configs/dev.nginx.conf
+++ b/deployment/configs/dev.nginx.conf
@@ -50,27 +50,9 @@ http {
 
     server {
         listen 80;
-        server_name  halo-its.me www.halo-its.me;
+        server_name  _;
 
-        return 301 https://$server_name$request_uri;
-    }
-    
-    server {
-       listen       443 ssl;
-       server_name  www.halo-its.me;
-
-       ssl_certificate      /etc/ssl/certs/halo-its.me_20210825XB0Z.ca-bundle.pem;
-       ssl_certificate_key  /etc/ssl/certs/halo-its.me_20210825XB0Z.key.pem;
-
-       ssl_session_cache    shared:SSL:1m;
-       ssl_session_timeout  5m;
-
-       ssl_ciphers  HIGH:!aNULL:!MD5;
-       ssl_prefer_server_ciphers  on;
-
-       ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
-
-       location / {
+        location / {
             proxy_set_header HOST $host;
             proxy_pass http://node;
             proxy_http_version 1.1;
@@ -82,9 +64,11 @@ http {
             proxy_ignore_headers Cache-Control;
             proxy_cache_valid 30d;
             proxy_pass http://node;
-
+            # access_log off;
+            # expires max;
             add_header X-Asset "yes";
             add_header access-control-allow-origin "*";
+            # add_header Cache-Control "public";
         }
 
         location /_next/static {
@@ -92,5 +76,4 @@ http {
             proxy_pass http://node;
         }
     }
-    include servers/*;
 }
