[Nexters/covid-letter-web#154] 🚨 lint-staged에서 자동 린트 fix

--- a/package.json
+++ b/package.json
@@ -82,7 +82,11 @@
     },
     "lint-staged": {
         "**/*.{json,yaml,md}": "prettier --check",
-        "**/*.{js,jsx,tsx}": "eslint"
+        "**/*.{js,jsx,tsx}": [
+            "eslint --fix",
+            "prettier --write",
+            "git add"
+        ]
     },
     "husky": {
         "hooks": {
