--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -7,15 +7,13 @@ on:
 jobs:
   check:
     name: Prettier & Lint Check
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted]
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: 16
+          check-latest: true
 
       - name: Install packages
         run: npm ci
@@ -24,4 +22,4 @@ jobs:
         run: npm run lint
 
       - name: Prettier
-        run: npm run prettier --if-present
+        run: npm run prettier
