--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -15,4 +15,4 @@ jobs:
           check-latest: true
       - run: npm ci
       - run: npm run lint
-      - run: npm run prettier
+      - run: npx prettier '**/*.{json,yaml}' -c
