🔧 prettier action 수정

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -15,4 +15,6 @@ jobs:
           check-latest: true
       - run: npm ci
       - run: npm run lint
-      - run: npx prettier '**/*.{json,yaml}' -c
+      - uses: creyD/prettier_action@v4.2
+        with:
+          prettier_options: --check .
