--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -18,6 +18,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run prettier:fix
-      - with:
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
           commit_message: 🚨 Apply formatting changes
           branch: ${{ github.head_ref }}
