🧪 prettier check action 확인

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -17,8 +17,4 @@ jobs:
           check-latest: true
       - run: npm ci
       - run: npm run lint
-      - run: npm run prettier:fix
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: 🚨 Apply formatting changes
-          branch: ${{ github.head_ref }}
+      - run: npx prettier -c .
