--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
           node-version: '16'
           check-latest: true
       - run: npm ci
-      - run: npm run test:local
+      - run: npm run test
